@@ -1356,6 +1356,11 @@ int RenderTableSection::layoutRows( int toAdd )
             cell->setCellBottomExtra( rHeight - cell->height() - te);
             }
             
+#ifdef INCREMENTAL_REPAINTING
+            int oldCellX = cell->xPos();
+            int oldCellY = cell->yPos();
+#endif
+        
             if (style()->direction()==RTL) {
                 cell->setPos(
 		    table()->columnPos[(int)totalCols] -
@@ -1365,6 +1370,14 @@ int RenderTableSection::layoutRows( int toAdd )
             } else {
                 cell->setPos( table()->columnPos[c] + leftOffset, rowPos[rindx] );
 	    }
+
+#ifdef INCREMENTAL_REPAINTING
+            // If the cell moved, we have to repaint it as well as any floating/positioned
+            // descendants.  An exception is if we need a layout.  In this case, we know we're going to
+            // repaint ourselves (and the cell) anyway.
+            if (!selfNeedsLayout() && checkForRepaintDuringLayout())
+                cell->repaintDuringLayoutIfMoved(oldCellX, oldCellY);
+#endif
         }
     }
 
